# kingpi-server

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.claude/rules/: agents.md  git-workflow.md
.claude/skills/backend-patterns/: SKILL.md
.claude/skills/e2e-testing/: SKILL.md
.claude/skills/fastapi-patterns/: SKILL.md
.claude/skills/search-first/: SKILL.md
.claude/skills/security-review/: SKILL.md
.claude/skills/tdd-workflow/: SKILL.md
.claude/skills/verification-loop/: SKILL.md
.devcontainer/: devcontainer.json  post-create.sh
alembic/: env.py
alembic/versions/: 96ea6a0b321c_create_package_events_table.py
docs/: Candidate - Data Platform Technical Test.md  architecture.md  codespaces.md  implementation-plan.md  phase2-pypi-cache.md
src/kingpi/: app.py  config.py  dependencies.py
src/kingpi/api/: events.py  health.py  packages.py
src/kingpi/db/: __init__.py  engine.py
src/kingpi/models/: __init__.py  event.py
src/kingpi/schemas/: event.py  package.py
src/kingpi/services/: cache.py  event_store.py  package_service.py  pg_event_store.py  pypi_cache_client.py  pypi_client.py
src/pypi_server/: app.py  config.py  dependencies.py
src/pypi_server/schemas/: event.py  (+1 more)
tests/: conftest.py  test_app.py  test_cache.py  test_e2e.py  test_event_store.py  test_events.py  test_health_ready.py  test_packages.py  test_pg_event_store.py  test_pypi_cache_client.py  test_pypi_client.py
tests/stress/: README.md  test_atomicity.sh
(+1 files in other folders)
