[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kingpi-server"
version = "0.1.0"
description = "KingPi — a lightweight PyPI analytics proxy server"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "aiosqlite>=0.20,<1",
    "pydantic-settings>=2.7,<3",
    "httpx>=0.28,<1",
    "redis>=5.0,<6",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6,<7",
    "ruff>=0.9,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that hit real external services (deselected by default)",
]
addopts = "-m 'not integration'"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.hatch.build.targets.wheel]
packages = ["src/kingpi"]
